--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
+    "firebase": "7.9.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-loader": "^1.2.1",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-paper": "^3.8.0",
     "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11",
-    "@react-native-community/masked-view": "0.1.6",
-    "react-native-screens": "~2.2.0",
-    "firebase": "7.9.0"
+    "react-navigation-stack": "^2.3.11"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
