--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "firebase": "7.9.0",
@@ -19,10 +20,14 @@
     "react-native-loader": "^1.2.1",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-paper": "^3.8.0",
+    "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-side-drawer": "^1.2.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
+    "react-navigation-drawer": "^2.4.11",
     "react-navigation-stack": "^2.3.11"
   },
   "devDependencies": {
