--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-chart-kit": "^5.3.1",
+    "react-native-d3multiline-chart": "^1.0.19",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-loader": "^1.2.1",
     "react-native-loading-spinner-overlay": "^1.1.0",
@@ -24,11 +26,13 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-side-drawer": "^1.2.6",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.11",
+    "svg-path-properties": "^1.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
