--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-chart-kit": "^5.3.1",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-d3multiline-chart": "^1.0.19",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-loader": "^1.2.1",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-paper": "^3.8.0",
+    "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
