--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-side-drawer": "^1.2.6",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
