--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "expo": "~37.0.3",
     "firebase": "7.9.0",
     "native-base": "^2.13.12",
+    "package.json": "^2.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-chart-kit": "^5.3.1",
+    "react-native-chart-kit": "^5.4.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-d3multiline-chart": "^1.0.19",
     "react-native-gesture-handler": "^1.6.1",
@@ -28,7 +29,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-side-drawer": "^1.2.6",
-    "react-native-svg": "11.0.1",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
