--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "@react-native-community/masked-view": "0.1.6",
+    "d3": "^5.16.0",
     "expo": "~37.0.3",
     "firebase": "7.9.0",
     "native-base": "^2.13.12",
@@ -35,6 +36,8 @@
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
     "react-navigation-stack": "^2.3.11",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "svg-path-properties": "^1.0.4"
   },
   "devDependencies": {
