--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-loader": "^1.2.1",
     "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.8.0",
     "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-reanimated": "^1.7.1",
