--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "@google-cloud/storage": "^4.7.0",
     "@react-native-community/masked-view": "0.1.6",
     "d3": "^5.16.0",
     "expo": "~37.0.3",
@@ -27,6 +28,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.8.0",
     "react-native-pinch-zoom-view": "^0.2.0",
+    "react-native-pure-chart": "0.0.24",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
