--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-background-fetch": "^3.0.4",
     "react-native-chart-kit": "^5.4.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-d3multiline-chart": "^1.0.19",
