--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "d3": "^5.16.0",
     "expo": "~37.0.3",
     "firebase": "7.9.0",
+    "fusioncharts": "^3.15.1-sr.1",
     "native-base": "^2.13.12",
     "package.json": "^2.0.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-google-charts": "^3.0.15",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-background-fetch": "^3.0.4",
     "react-native-chart-kit": "^5.4.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-d3multiline-chart": "^1.0.19",
+    "react-native-fusioncharts": "^4.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-loader": "^1.2.1",
     "react-native-loading-spinner-overlay": "^1.1.0",
@@ -44,7 +47,8 @@
     "react-navigation-stack": "^2.3.11",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "svg-path-properties": "^1.0.4"
+    "svg-path-properties": "^1.0.4",
+    "victory-native": "^34.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
