--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@expo/vector-icons": "^10.0.6",
     "@google-cloud/storage": "^4.7.0",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/native": "^5.4.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.5",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
     "expo": "~37.0.3",
@@ -42,7 +44,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.4.0",
-    "react-navigation": "^4.3.7",
+    "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.4.11",
     "react-navigation-stack": "^2.3.11",
     "react-redux": "^7.2.0",
@@ -51,8 +53,9 @@
     "victory-native": "^34.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "react-navigation-tabs": "^2.8.13"
   },
   "private": true
 }
