--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@expo/vector-icons": "^10.0.6",
     "@google-cloud/storage": "^4.7.0",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.5.1",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
     "expo": "~37.0.3",
+    "expo-font": "^8.1.1",
     "firebase": "7.9.0",
     "fusioncharts": "^3.15.1-sr.1",
     "native-base": "^2.13.12",
@@ -39,14 +41,17 @@
     "react-native-screens": "~2.2.0",
     "react-native-side-drawer": "^1.2.6",
     "react-native-svg": "^12.1.0",
+    "react-native-threads": "0.0.19",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^9.4.0",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
     "react-navigation-stack": "^2.3.11",
+    "react-navigation-tabs": "^2.8.13",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "svg-path-properties": "^1.0.4",
     "victory-native": "^34.3.0"
   },
